--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Associação Refletir</title>
+  <link rel="shortcut icon" type="imagex/png" href="https://drive.google.com/uc?export=view&id=1TmDd9GkfILiR_kV09DniKBM2K6_IacMg">
   </head>
 <body>
   <!-- Cabeçalho com logo -->
   <header class="cabecalho">
     <div class="container">
       <a href="#" class="logo">
-        <img src="img/logo_ass.png" alt="Associação Refletir">
+        <img src="https://drive.google.com/uc?export=view&id=19MgAld6jKN0y-iEe1Hgw-UtNP3J8Xupd" alt="Associação Refletir">
       </a>
       <nav>
         <ul>
