--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Associação Refletir</title>
-  <link rel="shortcut icon" type="imagex/png" href="https://drive.google.com/uc?export=view&id=1TmDd9GkfILiR_kV09DniKBM2K6_IacMg">
+  <link rel="icon" href="https://drive.google.com/uc?export=view&id=1TmDd9GkfILiR_kV09DniKBM2K6_IacMg" type="image/png">
   </head>
 <body>
   <!-- Cabeçalho com logo -->
