--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="cabecalho">
     <div class="container">
       <a href="#" class="logo">
-        <img src="https://drive.google.com/uc?export=view&id=19MgAld6jKN0y-iEe1Hgw-UtNP3J8Xupd" alt="Associação Refletir">
+       <img src="https://drive.google.com/uc?export=view&id=19MgAld6jKN0y-iEe1Hgw-UtNP3J8Xupd" alt="logo_ass">
       </a>
       <nav>
         <ul>
