--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Associação Refletir</title>
-  <link rel="icon" href="https://drive.google.com/uc?export=view&id=1TmDd9GkfILiR_kV09DniKBM2K6_IacMg" type="image/png">
+  <link rel="icon" href="img/icon_ass.ico" type="image/png">
   </head>
 <body>
   <!-- Cabeçalho com logo -->
   <header class="cabecalho">
     <div class="container">
       <a href="#" class="logo">
-       <img src="https://drive.google.com/uc?export=view&id=19MgAld6jKN0y-iEe1Hgw-UtNP3J8Xupd" alt="logo_ass">
+       <img src="img/logo_ass.png" alt="Associação Refletir">
       </a>
       <nav>
         <ul>
